# langchain-apple-foundation-models

./: README.md  pyproject.toml
src/langchain_apple_foundation_models/: __init__.py  chat_models.py
tests/: test_chat_models.py  test_standard.py
tests/__snapshots__/: test_standard.ambr
