[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-apple-foundation-models"
version = "0.1.0"
description = "LangChain chat model provider for Apple's on-device Foundation Models framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rajan Sharma" }]
keywords = ["langchain", "apple", "foundation-models", "on-device", "llm", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3",
    "apple-foundation-models>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/rajanshxrma/langchain-apple-foundation-models"
Repository = "https://github.com/rajanshxrma/langchain-apple-foundation-models"
Issues = "https://github.com/rajanshxrma/langchain-apple-foundation-models/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_apple_foundation_models"]
